Quotation Submit view added

--- a/KGERP/Views/Quotation/QuotationSubmit.cshtml
+++ b/KGERP/Views/Quotation/QuotationSubmit.cshtml
@@ -28,7 +28,7 @@
 <section class="content-header">
     <h1>
         <span>
-            Quotation List
+            Quotation Submit
         </span>
 
     </h1>
@@ -36,7 +36,7 @@
         <li><a href="~/Home/Index"><i class="fa fa-dashboard"></i>Dashboard</a></li>
         <li class="active">
             <span>
-                Quotation List
+                Quotation Submit
             </span>
         </li>
     </ol>
