material receive updated

--- a/KGERP/Views/StockInfos/Index.cshtml
+++ b/KGERP/Views/StockInfos/Index.cshtml
@@ -7,7 +7,7 @@
 }
 
 <section class="content-header">
-    <h1>Warehouse</h1>
+    <h1>Project Location</h1>
     <ol class="breadcrumb">
         <li><a href="~/Home/Index"><i class="fa fa-dashboard"></i>Dashboard</a></li>
         <li class="active">Project Location</li>
