--- a/KGERP/Views/Report/BalanceSheet.cshtml
+++ b/KGERP/Views/Report/BalanceSheet.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewData["Title"] = "Balance Sheet Report";
     Layout = "~/Views/Shared/_Layout.cshtml";
-   
+
 }
 
 <style type="text/css">
@@ -37,50 +37,61 @@
                             @Html.HiddenFor(model => model.CompanyId)
 
                             <div class="row">
-                                <div class="col-md-1">
-
-                                </div>
-
-                                <div class="col-md-5">
-                                    <div class="form-group">
-                                        <label for="message-text" class="col-form-label">As on</label>
-                                        @Html.EditorFor(x => x.StrFromDate, new { htmlAttributes = new { @class = "datepicker", @autocomplete = "off" } })
-                                        @Html.ValidationMessageFor(model => model.StrFromDate, "", new { @class = "text-danger" })
+                                <div class="col-md-2">
                                     </div>
-                                </div>
-                                <div class="col-md-5">
-                                    <div class="form-group">
-                                        <label for="message-text" class="col-form-label">Select Report:</label>
-                                        <br />
-                                        @Html.RadioButtonFor(m => m.ReportName, Model.ReportName) Balance Sheet
-                                        @Html.RadioButtonFor(m => m.ReportName, Model.NoteReportName) Note
-                                    </div>
-                                </div>
-                                <div class="col-md-1">
-
-                                </div>
-                            </div>
-
-                            <div class="row">
-                                <div class="form-group">
-                                    <div class="col-md-1"></div>
                                     <div class="col-md-3">
-                                        <select class="pull-right" style="color:#ffffff; background-color:#dd4b39;height:34px;font-size:15px;width:100%" name="ReportType" id="ReportType">
-                                            <option value="PDF">PDF</option>
-                                            <option value="EXCEL">EXCEL</option>
-                                            <option value="WORD">WORD</option>
-                                        </select>
+                                        <div class="form-group float-end">
+                                            <label for="message-text" class="col-form-label">As on</label>
+                                            <div>
+                                                @Html.EditorFor(x => x.StrFromDate, new { htmlAttributes = new { @class = "datepicker", @autocomplete = "off" } })
+                                                @Html.ValidationMessageFor(model => model.StrFromDate, "", new { @class = "text-danger" })
+
+                                            </div>
+                                        </div>
                                     </div>
-                                    <div class="col-md-7">
-                                        <input type="submit" name="EXPORT" style="width:100%" value="EXPORT" class="btn btn-success pull-right" formtarget="_blank" />
+
+
+
+                                    <div class="col-md-3">
+                                        <div class="form-group">
+                                            <label asp-for="ProjectId">Select Project : </label>
+                                            @Html.DropDownListFor(model => model.CostCenterId, new SelectList(Model.CostCenterList, "Value", "Text"), "== Select Project ==", new { id = "selectProject", @class = "form-control searchingDropdown" })
+                                            @Html.ValidationMessageFor(model => model.CostCenterId, "", new { @class = "text-danger" })
+                                        </div>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <div class="form-group">
+                                            <label for="message-text" class="col-form-label">Select Report:</label>
+                                            <br />
+                                            @Html.RadioButtonFor(m => m.ReportName, Model.ReportName) Balance Sheet
+                                            @Html.RadioButtonFor(m => m.ReportName, Model.NoteReportName) Note
+                                        </div>
+                                    </div>
+                                    <div class="col-md-1">
 
                                     </div>
-                                    <div class="col-md-1"></div>
-
                                 </div>
-                            </div>
 
-                        </div>
+                                <div class="row mt-2">
+                                    <div class="form-group">
+                                        <div class="col-md-8"></div>
+                                        <div class="col-md-2">
+                                            <select class="pull-right" style="color:#ffffff; background-color:#dd4b39;height:34px;font-size:15px;width:100%" name="ReportType" id="ReportType">
+                                                <option value="PDF">PDF</option>
+                                                <option value="EXCEL">EXCEL</option>
+                                                <option value="WORD">WORD</option>
+                                            </select>
+                                        </div>
+                                        <div class="col-md-2">
+                                            <input type="submit" name="EXPORT" style="width:100%" value="EXPORT" class="btn btn-success pull-right" formtarget="_blank" />
+
+                                        </div>
+                                       
+
+                                    </div>
+                                </div>
+
+                            </div>
                         <div class="box-footer">
                         </div>
 
