--- a/KGERP/Views/Report/TrailBalance.cshtml
+++ b/KGERP/Views/Report/TrailBalance.cshtml
@@ -14,34 +14,40 @@
     @Html.HiddenFor(model => model.CompanyId)
     @Html.HiddenFor(model => model.ReportName)
 
-    <div class="row">
-        <div class="col-md-3">
-            @*@Html.Label("As On", htmlAttributes: new { @class = "control-label" })*@
-            <br />
-            @Html.EditorFor(model => model.StrFromDate, new { htmlAttributes = new { @class = "datepicker", @autocomplete = "off" } })
-            @Html.ValidationMessageFor(model => model.FromDate, "", new { @class = "text-danger" })
+<div class="row">
+    <div class="col-md-3">
+        @*@Html.Label("As On", htmlAttributes: new { @class = "control-label" })*@
+        <br />
+        @Html.EditorFor(model => model.StrFromDate, new { htmlAttributes = new { @class = "datepicker", @autocomplete = "off" } })
+        @Html.ValidationMessageFor(model => model.FromDate, "", new { @class = "text-danger" })
 
-        </div>
-        <div class="col-md-3">
-            @*@Html.Label("As On", htmlAttributes: new { @class = "control-label" })*@
-            <br />
-            @Html.EditorFor(model => model.StrToDate, new { htmlAttributes = new { @class = "datepicker", @autocomplete = "off" } })
-            @Html.ValidationMessageFor(model => model.ToDate, "", new { @class = "text-danger" })
+    </div>
+    <div class="col-md-3">
+        @*@Html.Label("As On", htmlAttributes: new { @class = "control-label" })*@
+        <br />
+        @Html.EditorFor(model => model.StrToDate, new { htmlAttributes = new { @class = "datepicker", @autocomplete = "off" } })
+        @Html.ValidationMessageFor(model => model.ToDate, "", new { @class = "text-danger" })
 
-        </div>
-
-
-        <div class="col-md-3" style="margin-top:24px;float:left">
-            <input type="submit" name="EXPORT" value="EXPORT" class="btn btn-success pull-right" formtarget="_blank" />
-            <select class="pull-right" style="color:#ffffff; background-color:#dd4b39;height:34px;font-size:15px" name="ReportType" id="ReportType">
-                <option value="PDF">PDF</option>
-                <option value="EXCEL">EXCEL</option>
-                <option value="WORD">WORD</option>
-            </select>
-
-            @*<input type="submit" style="margin-top:20px" formtarget="_blank" value="Report" class="btn btn-success" />*@
+    </div>
+    <div class="col-md-3">
+        <div class="form-group">
+            <label asp-for="ProjectId">Select Project : </label>
+            @Html.DropDownListFor(model => model.CostCenterId, new SelectList(Model.CostCenterList, "Value", "Text"), "== Select Project ==", new { id = "selectProject", @class = "form-control searchingDropdown" })
+            @Html.ValidationMessageFor(model => model.CostCenterId, "", new { @class = "text-danger" })
         </div>
     </div>
+
+    <div class="col-md-3" style="margin-top:24px;float:left">
+        <input type="submit" name="EXPORT" value="EXPORT" class="btn btn-success pull-right" formtarget="_blank" />
+        <select class="pull-right" style="color:#ffffff; background-color:#dd4b39;height:34px;font-size:15px" name="ReportType" id="ReportType">
+            <option value="PDF">PDF</option>
+            <option value="EXCEL">EXCEL</option>
+            <option value="WORD">WORD</option>
+        </select>
+
+        @*<input type="submit" style="margin-top:20px" formtarget="_blank" value="Report" class="btn btn-success" />*@
+    </div>
+</div>
 }
 
 @section Scripts {
