transfer controller updated

--- a/KGERP/Views/WareHouse/GCCLWareHousePOReceivingSlave.cshtml
+++ b/KGERP/Views/WareHouse/GCCLWareHousePOReceivingSlave.cshtml
@@ -76,7 +76,7 @@
 
                                         <td width="18%"><b>Challan Date</b></td>
                                         <td width="5%">:</td>
-                                        <td width="27%">@Model.ChallanDate</td>
+                                        <td width="27%">@Model.ChallanDate.Value.ToString("dd/MM/yyyy")</td>
                                     </tr>
 
                                     <tr>
