--- a/KGERP/Views/MaterialReceive/SeedIndex.cshtml
+++ b/KGERP/Views/MaterialReceive/SeedIndex.cshtml
@@ -67,7 +67,7 @@
                                     <tr>
                                         <th style="width:5%;">SL</th>
                                         <th style="width:10%;">Receive No</th>
-                                        <th style="width:15%;">PO No</th>
+                                        <th style="width:15%;">WO No</th>
                                         <th style="width:15%;">Challan Date</th>
                                         <th style="width:10%;">Received Date</th>
                                         <th style="width:15%;">Supplier</th>
@@ -81,50 +81,49 @@
                                 <tbody>
                                     @foreach (var item in Model.MRlist)
                                     {
-                                    <tr>
-                                        <td>
-                                            @(++sl)
-                                        </td>
-                                        
-                                        <td>@item.ReceiveNo</td>
-                                        <td>@item.PurchaseOrderNo</td>
-                                        <td>
-                                            @if (item.ChallanDate.HasValue)
-                                            {
-                                                @item.ChallanDate.Value.ToString("dd/MMM/yyyy")
-                                            }
-                                        </td>
-                                        <td>
-                                            @if (item.ReceivedDate.HasValue)
-                                            {
-                                                @item.ReceivedDate.Value.ToString("dd/MMM/yyyy")
-                                            }
-                                        </td>
-                                        <td>
-                                            @item.SupplierName
-                                        </td>
-                                        <td>
-                                            @if(item.IsSubmitted)
-                                            {
-                                            <button class="btn btn-Success btn-xs">SUBMITTED</button>
-                                            }
-                                           else
-                                            {
-                                                <button class="btn btn-warning btn-xs">NOT-SUBMITTED</button>
-                                            }
-                                        </td>
-                                        <td>
-                                            <!--WareHouse/WareHousePOReceivingSlave?companyId=21&materialReceiveId=82531-->
-                                            <a href="~/WareHouse/WareHousePOReceivingSlaveReport?companyId=@item.CompanyId&materialReceiveId=@item.MaterialReceiveId" target="_blank" class="btn btn-primary btn-xs">
-                                                Report
-                                            </a>
-                                        </td>
-                                        <td>
-                                            <a href="~/WareHouse/GCCLWareHousePOReceivingSlave?companyId=@item.CompanyId&materialReceiveId=@item.MaterialReceiveId" title="Details" class="btn btn-success btn-xs">
-                                                <i class="fa fa-sticky-note"></i>
-                                            </a>
-                                        </td>
-                                    </tr>
+                                        <tr>
+                                            <td>
+                                                @(++sl)
+                                            </td>
+
+                                            <td>@item.ReceiveNo</td>
+                                            <td>@item.PurchaseOrderNo</td>
+                                            <td>
+                                                @if (item.ChallanDate.HasValue)
+                                                {
+                                                    @item.ChallanDate.Value.ToString("dd/MM/yyyy")
+                                                }
+                                            </td>
+                                            <td>
+                                                @if (item.ReceivedDate.HasValue)
+                                                {
+                                                    @item.ReceivedDate.Value.ToString("dd/MM/yyyy")
+                                                }
+                                            </td>
+                                            <td>
+                                                @item.SupplierName
+                                            </td>
+                                            <td>
+                                                @if (item.IsSubmitted)
+                                                {
+                                                    <button class="btn btn-Success btn-xs">SUBMITTED</button>
+                                                }
+                                                else
+                                                {
+                                                    <button class="btn btn-warning btn-xs">NOT-SUBMITTED</button>
+                                                }
+                                            </td>
+                                            <td>
+                                                <a href="~/WareHouse/WareHousePOReceivingSlaveReport?companyId=@item.CompanyId&materialReceiveId=@item.MaterialReceiveId" target="_blank" class="btn btn-primary btn-xs">
+                                                    Report
+                                                </a>
+                                            </td>
+                                            <td>
+                                                <a href="~/WareHouse/GCCLWareHousePOReceivingSlave?companyId=@item.CompanyId&materialReceiveId=@item.MaterialReceiveId" title="Details" class="btn btn-success btn-xs">
+                                                    <i class="fa fa-sticky-note"></i>
+                                                </a>
+                                            </td>
+                                        </tr>
 
                                     }
                                 </tbody>
@@ -144,6 +143,7 @@
     @Styles.Render("~/Content/cssjqryUi")
 
     <script type="text/javascript">
+
         $('.datepicker').datepicker({
             dateFormat: "dd/mm/yy",
             showOn: 'both',
@@ -152,10 +152,11 @@
             changeYear: true,
             yearRange: "2001:+50"
         });
+
         var message = '@message';
-    if(message){
+        if(message){
         alert(message);
-    }
+    };
 
     </script>
 
